# JasperCompiler

./: .gitignore  CMakeLists.txt  README.md  driver.cpp  driver.hpp  expressions.y  jasper_function.cpp  jasper_function.hpp  jasper_number.cpp  jasper_number.hpp  lexer.l  main.cpp  parser.yy  scanner.ll
.github/workflows/: cmake.yml
src/: ast.hpp  automaton.hpp  compile_time_environment.cpp  cst.cpp  cst.hpp  ct_eval.cpp  error_report.cpp  error_report.hpp  match_identifiers.cpp  meta_unifier.hpp  parser.hpp  source_location.hpp  typecheck.cpp  typesystem.cpp
src/algorithms/: tarjan_solver.hpp  unification.cpp
src/compiler/: compile.cpp  compile.hpp  compiler.cpp  compiler.hpp  error.cpp  error.hpp  execute.cpp  execute.hpp  garbage_collector.cpp  garbage_collector.hpp  gc_cell.cpp  gc_cell.hpp  gc_ptr.hpp  main.cpp  native.cpp  native.hpp  stack.cpp  stack.hpp  utils.cpp  utils.hpp  value.cpp  value.hpp  value_tag.hpp
src/interpreter/: eval.cpp  gc_cell.hpp  value.hpp
src/test/: tester.cpp
src/utils/: block_allocator.hpp  chunked_array.hpp  interned_string.hpp  span.hpp  string_set.cpp  string_set.hpp  string_view.hpp
tests/: basic.jp  basic_op.jp  working_tests.jp
